fix slogan mibile

--- a/src/index.html
+++ b/src/index.html
@@ -65,8 +65,7 @@
           <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
         </div>
         <div class="screen-promo-slogan-mobile">
-          <div>ОТКРЫВАЙ ПРИРОДУ НАСТОЯЩЕЙ ДРУЖБЫ</div>
-          <img src="./images/slogan-mobile.png" alt="slogan">
+          <img src="./images/slogan@2x.png" alt="slogan">
         </div>
         <button class="screen-promo-btn ui-btn benefits">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -80,11 +79,7 @@
       </div>
       <img src="./images/top-screen-bg.jpg" class="screen-promo-bg" alt="bg">
       <div class="screen-promo-logo">
-        <!-- <img src="./images/logo-main.png" alt="logo"> -->
-        <picture>
-          <source media="(max-width: 599px)" srcset="./images/logo-main-mobile.png" />
-          <img src="./images/logo-main.png" alt="logo" />
-        </picture>
+        <img src="./images/logo-main.png" alt="logo">
       </div>
       <div class="screen-promo-imgs">
         <img src="./images/bottle.png" class="screen-promo-bottles" alt="bottle">
@@ -108,8 +103,8 @@
                 <div class="benefits-slide-content">
                   <div class="benefits-slide-inner">
                     <div class="benefits-slide-descr">
-                      <p>Созданное природой – совершенно. Вдохновленный этой идеей, Белый Медведь проделал долгий путь
-                        в поисках чистых, натуральных, совершенных, как сама природа, ингредиентов.</p>
+                      Созданное природой – совершенно. Вдохновленный этой идеей, Белый Медведь проделал долгий путь
+                      в поисках чистых, натуральных, совершенных, как сама природа, ингредиентов.
                     </div>
                   </div>
                 </div>
@@ -129,9 +124,8 @@
                 <div class="benefits-slide-content">
                   <div class="benefits-slide-inner">
                     <div class="benefits-slide-descr">
-                      <p>Отборный солод, свежесобранный хмель и вода из природных глубин наполняют пиво «Белый Медведь»
-                        особенно бархатистым вкусом и насыщенным ароматом.
-                      </p>
+                      Отборный солод, свежесобранный хмель и вода из природных глубин наполняют пиво «Белый Медведь»
+                      особенно бархатистым вкусом и насыщенным ароматом.
                     </div>
                   </div>
                 </div>
@@ -151,10 +145,8 @@
                 <div class="benefits-slide-content">
                   <div class="benefits-slide-inner">
                     <div class="benefits-slide-descr">
-                      <p>
-                        Высокое качество продукта подтверждается международными экспертами: 19 наград конкурса
-                        Monde Selection Quality Awards.
-                      </p>
+                      Высокое качество продукта подтверждается международными экспертами: 19 наград конкурса
+                      Monde Selection Quality Awards.
                     </div>
                   </div>
                 </div>
@@ -174,10 +166,8 @@
                 <div class="benefits-slide-content">
                   <div class="benefits-slide-inner">
                     <div class="benefits-slide-descr">
-                      <p>
-                        Исследуй мир и создавай новое
-                        вместе с Белым Медведем!
-                      </p>
+                      Исследуй мир и создавай новое
+                      вместе с Белым Медведем!
                     </div>
                   </div>
                 </div>
