--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,29 @@
   <div id="screens" class="screens">
     <!-- main screen start -->
     <div class="screen screen-promo">
-      <div class="screen-promo-content">
+      <div class="container">
+        <div class="screen-promo-content">
+          <div class="screen-promo-slogan">
+            <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
+          </div>
+          <div class="screen-promo-slogan-mobile">
+            <img src="./images/slogan@2x.png" alt="slogan">
+          </div>
+          <button class="screen-promo-btn ui-btn benefits">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M19.5 12L12 19.5L4.5 12" stroke="#23372B" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path d="M19.5 4.5L12 12L4.5 4.5" stroke="#23372B" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+            Исследовать
+          </button>
+        </div>
+        <div class="screen-promo-logo">
+          <img src="./images/logo-main.png" alt="logo">
+        </div>
+      </div>
+      <!-- <div class="screen-promo-content">
         <div class="screen-promo-slogan">
           <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
         </div>
@@ -76,13 +98,13 @@
           </svg>
           Исследовать
         </button>
-      </div>
+      </div> -->
       <img src="./images/top-screen-bg.jpg" class="screen-promo-bg" alt="bg">
-      <div class="screen-promo-logo">
+      <!-- <div class="screen-promo-logo">
         <img src="./images/logo-main.png" alt="logo">
-      </div>
+      </div> -->
       <div class="screen-promo-imgs">
-        <img src="./images/bottle.png" class="screen-promo-bottles" alt="bottle">
+        <img src="./images/bottle.png" srcset="./images/bottle@2x.png" class="screen-promo-bottles" alt="bottle">
       </div>
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
       <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
