--- a/src/index.html
+++ b/src/index.html
@@ -61,58 +61,47 @@
     <!-- main screen start -->
     <div class="screen screen-promo">
       <div class="container">
-        <div class="screen-promo-content">
-          <div class="screen-promo-slogan">
-            <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
+        <div class="row">
+          <div class="col-md-4 col-sm-4 col-xs-4">
+            <div class="screen-promo-left">
+              <div class="screen-promo-slogan">
+                <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
+              </div>
+              <button class="screen-promo-btn ui-btn benefits">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M19.5 12L12 19.5L4.5 12" stroke="#23372B" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M19.5 4.5L12 12L4.5 4.5" stroke="#23372B" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+                Исследовать
+              </button>
+            </div>
           </div>
-          <div class="screen-promo-slogan-mobile">
-            <img src="./images/slogan@2x.png" alt="slogan">
+          <div class="col-md-6 col-sm-6 col-xs-6">
+            <div class="screen-promo-bottle">
+              <div class="screen-promo-imgs">
+                <img src="./images/bottle.png" srcset="./images/bottle@2x.png" alt="bottle">
+              </div>
+            </div>
           </div>
-          <button class="screen-promo-btn ui-btn benefits">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M19.5 12L12 19.5L4.5 12" stroke="#23372B" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
-              <path d="M19.5 4.5L12 12L4.5 4.5" stroke="#23372B" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
-            Исследовать
-          </button>
-        </div>
-        <div class="screen-promo-logo">
-          <img src="./images/logo-main.png" alt="logo">
+          <div class="col-md-2 col-sm-2 col-xs-2">
+            <div class="screen-promo-logo">
+              <img src="./images/logo-main.png" alt="logo">
+            </div>
+          </div>
         </div>
       </div>
-      <!-- <div class="screen-promo-content">
-        <div class="screen-promo-slogan">
-          <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
-        </div>
-        <div class="screen-promo-slogan-mobile">
-          <img src="./images/slogan@2x.png" alt="slogan">
-        </div>
-        <button class="screen-promo-btn ui-btn benefits">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M19.5 12L12 19.5L4.5 12" stroke="#23372B" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-            <path d="M19.5 4.5L12 12L4.5 4.5" stroke="#23372B" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-          </svg>
-          Исследовать
-        </button>
-      </div> -->
+
       <img src="./images/top-screen-bg.jpg" class="screen-promo-bg" alt="bg">
-      <!-- <div class="screen-promo-logo">
-        <img src="./images/logo-main.png" alt="logo">
-      </div> -->
-      <div class="screen-promo-imgs">
-        <img src="./images/bottle.png" srcset="./images/bottle@2x.png" class="screen-promo-bottles" alt="bottle">
-      </div>
+
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
       <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
     </div>
     <!-- main screen end -->
 
     <!-- second screen start -->
-    <div class="screen screen-benefits">
+    <!-- <div class="screen screen-benefits">
       <div class="benefits-slider swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -132,9 +121,9 @@
                 </div>
               </div>
               <img src="./images/logo-main.png" alt="logo" class="benefits-slide-where">
-            </div>
-            <!--.slide-->
-          </div>
+            </div> -->
+    <!--.slide-->
+    <!-- </div>
 
           <div class="swiper-slide">
             <div class="benefits-slide">
@@ -153,9 +142,9 @@
                 </div>
               </div>
               <img src="./images/logo-main.png" alt="logo" class="benefits-slide-where">
-            </div>
-            <!--.slide-->
-          </div>
+            </div> -->
+    <!--.slide-->
+    <!-- </div>
 
           <div class="swiper-slide">
             <div class="benefits-slide">
@@ -174,9 +163,9 @@
                 </div>
               </div>
               <img src="./images/logo-main.png" alt="logo" class="benefits-slide-where">
-            </div>
-            <!--.slide-->
-          </div>
+            </div> -->
+    <!--.slide-->
+    <!-- </div>
 
           <div class="swiper-slide">
             <div class="benefits-slide">
@@ -195,9 +184,9 @@
                 </div>
               </div>
               <img src="./images/logo-main.png" alt="logo" class="benefits-slide-where">
-            </div>
-            <!--.slide-->
-          </div>
+            </div> -->
+    <!--.slide-->
+    <!-- </div>
         </div>
 
       </div>
@@ -210,7 +199,7 @@
 
       </div>
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
-    </div>
+    </div> -->
     <!-- second screen end -->
   </div>
 
