--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,15 @@
               <div class="screen-promo-imgs">
                 <img src="./images/bottle.png" srcset="./images/bottle@2x.png" alt="bottle">
               </div>
+              <button class="screen-promo-btn ui-btn benefits">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M19.5 12L12 19.5L4.5 12" stroke="#23372B" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                  <path d="M19.5 4.5L12 12L4.5 4.5" stroke="#23372B" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+                Исследовать
+              </button>
             </div>
           </div>
           <div class="col-md-2 col-sm-2 col-xs-2">
