--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- <meta name="viewport" content="width=1024"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Belyy medved</title>
-  <meta name="keywords" content="Alivaria Promo" />
-  <meta name="description" content="Alivaria Promo" />
+  <title>Белый медведь</title>
+  <meta name="keywords" content="Белый медведь, Природа дружбы, исследуй создавай, пиво" />
+  <meta name="description" content="Белый медведь" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="format-detection" content="telephone=no" />
 
