--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
     <!-- main screen end -->
 
     <!-- second screen start -->
-    <!-- <div class="screen screen-benefits">
+    <div class="screen screen-benefits">
       <div class="benefits-slider swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -126,13 +126,16 @@
                       Созданное природой – совершенно. Вдохновленный этой идеей, Белый Медведь проделал долгий путь
                       в поисках чистых, натуральных, совершенных, как сама природа, ингредиентов.
                     </div>
+                    <div class="benefits-slide-slogan">
+                      <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
+                    </div>
                   </div>
                 </div>
               </div>
               <img src="./images/logo-main.png" alt="logo" class="benefits-slide-where">
-            </div> -->
-    <!--.slide-->
-    <!-- </div>
+            </div>
+            <!--.slide-->
+          </div>
 
           <div class="swiper-slide">
             <div class="benefits-slide">
@@ -147,13 +150,16 @@
                       Отборный солод, свежесобранный хмель и вода из природных глубин наполняют пиво «Белый Медведь»
                       особенно бархатистым вкусом и насыщенным ароматом.
                     </div>
+                    <div class="benefits-slide-slogan">
+                      <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
+                    </div>
                   </div>
                 </div>
               </div>
               <img src="./images/logo-main.png" alt="logo" class="benefits-slide-where">
-            </div> -->
-    <!--.slide-->
-    <!-- </div>
+            </div>
+            <!--.slide-->
+          </div>
 
           <div class="swiper-slide">
             <div class="benefits-slide">
@@ -168,13 +174,16 @@
                       Высокое качество продукта подтверждается международными экспертами: 19 наград конкурса
                       Monde Selection Quality Awards.
                     </div>
+                    <div class="benefits-slide-slogan">
+                      <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
+                    </div>
                   </div>
                 </div>
               </div>
               <img src="./images/logo-main.png" alt="logo" class="benefits-slide-where">
-            </div> -->
-    <!--.slide-->
-    <!-- </div>
+            </div>
+            <!--.slide-->
+          </div>
 
           <div class="swiper-slide">
             <div class="benefits-slide">
@@ -189,13 +198,16 @@
                       Исследуй мир и создавай новое
                       вместе с Белым Медведем!
                     </div>
+                    <div class="benefits-slide-slogan">
+                      <img src="./images/slogan@2x.png" srcset="./images/slogan@2x.png 2x" alt="slogan">
+                    </div>
                   </div>
                 </div>
               </div>
               <img src="./images/logo-main.png" alt="logo" class="benefits-slide-where">
-            </div> -->
-    <!--.slide-->
-    <!-- </div>
+            </div>
+            <!--.slide-->
+          </div>
         </div>
 
       </div>
@@ -208,7 +220,8 @@
 
       </div>
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
-    </div> -->
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+    </div>
     <!-- second screen end -->
   </div>
 
