--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- <meta name="viewport" content="width=1024"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Белый медведь</title>
+  <title>Белый медведь — исследуй и создавай!</title>
   <meta name="keywords" content="Белый медведь, Природа дружбы, исследуй создавай, пиво" />
-  <meta name="description" content="Белый медведь" />
+  <meta name="description" content="Белый медведь — исследуй и создавай!" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="format-detection" content="telephone=no" />
 
@@ -57,7 +57,7 @@
 </head>
 
 <body>
-  <div id="screens" class="screens">
+  <div id="screens" class="screens non-scroll">
     <!-- main screen start -->
     <div class="screen screen-promo">
       <div class="container">
