--- a/public/index.html
+++ b/public/index.html
@@ -243,7 +243,7 @@
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
       <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
     </div>
-    <footer class="screen footer">
+    <!-- <footer class="screen footer">
       <div class="container">
         <div class="flex">
           <div class="footer-logo">
@@ -251,6 +251,26 @@
           </div>
           <div class="footer-signature">
             ©2023, ИООО «ЭфесТрэйд БиУай», УНП 190980621
+          </div>
+        </div>
+      </div>
+    </footer> -->
+    <footer class="footer screen screen-footer">
+      <div class="container">
+        <div class="flex">
+          <div class="footer-logo">
+            <img src="./images/footer-logo.png" alt="logo">
+          </div>
+          <div class="footer-signature">
+            <div class="copy">
+              ©2023, ИООО «ЭфесТрэйд БиУай», УНП 190980621
+            </div>
+            <a href="#">
+              Согласие на обработку персональных данных
+            </a>
+            <a href="#">
+              Условия конкурса
+            </a>
           </div>
         </div>
       </div>
