--- a/src/contest.html
+++ b/src/contest.html
@@ -335,7 +335,7 @@
         <div class="screen-plans-cards">
           <div class="row">
 
-            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-12">
+            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-us-6">
               <div class="screen-plans-item">
                 <div class="screen-plans-item__likes">
                   <p>24</p>
@@ -365,7 +365,7 @@
               </div>
             </div>
 
-            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-12">
+            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-us-6">
               <div class="screen-plans-item">
                 <div class="screen-plans-item__likes">
                   <p>21</p>
@@ -393,7 +393,7 @@
               </div>
             </div>
 
-            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-12">
+            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-us-6">
               <div class="screen-plans-item">
                 <div class="screen-plans-item__likes">
                   <p>34</p>
@@ -421,7 +421,7 @@
               </div>
             </div>
 
-            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-12">
+            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-us-6">
               <div class="screen-plans-item">
                 <div class="screen-plans-item__likes">
                   <p>412</p>
@@ -449,7 +449,7 @@
               </div>
             </div>
 
-            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-12">
+            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-us-6">
               <div class="screen-plans-item">
                 <div class="screen-plans-item__likes">
                   <p>24</p>
@@ -477,7 +477,7 @@
               </div>
             </div>
 
-            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-12">
+            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-us-6">
               <div class="screen-plans-item">
                 <div class="screen-plans-item__likes">
                   <p>21</p>
@@ -505,7 +505,7 @@
               </div>
             </div>
 
-            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-12">
+            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-us-6">
               <div class="screen-plans-item">
                 <div class="screen-plans-item__likes">
                   <p>34</p>
@@ -533,7 +533,7 @@
               </div>
             </div>
 
-            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-xs-12">
+            <div class="screen-plans-cards__wrapper col-md-3 col-sm-4 col-us-6">
               <div class="screen-plans-item">
                 <div class="screen-plans-item__likes">
                   <p>412</p>
