--- a/public/contest.html
+++ b/public/contest.html
@@ -305,8 +305,9 @@
           </button>
         </div>
 
-        <img src="./images/gold.png" alt="ticket" class="ticket">
+        <!-- <img src="./images/gold.png" alt="ticket" class="ticket"> -->
       </div>
+      <img src="./images/gold.png" alt="ticket" class="ticket">
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
       <!-- <img src="./images/about-contest-bg.jpg" alt="bg" class="screen-about-contest-bg"> -->
     </div>
