--- a/public/contest.html
+++ b/public/contest.html
@@ -280,7 +280,7 @@
 
 
         <div class="contest-steps">
-          <img src="./images/steps-all.svg" alt="steps">
+          <img src="./images/steps-all-2.svg" alt="steps">
 
           <button class="ui-btn ui-btn-colored">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
