fixed 1 and 5 points

--- a/public/contest.html
+++ b/public/contest.html
@@ -115,23 +115,26 @@
 
     <div class="screen screen-about-contest">
       <div class="container">
-        <div class="h2 screen-about-contest__title">
-          ИССЛЕДУЙ ЛЕТО ВМЕСТЕ
-          С “БЕЛЫМ МЕДВЕДЕМ”
+        <div class="contest-content">
+          <div class="h2 screen-about-contest__title">
+            ИССЛЕДУЙ ЛЕТО ВМЕСТЕ
+            С “БЕЛЫМ МЕДВЕДЕМ”
+          </div>
+          <div class="screen-about-contest__period">
+            С 1 июля по 30 сентября
+          </div>
+          <div class="screen-about-contest__text">
+            <p>
+              Каждые 2 недели мы будем выбирать три самых
+              интересных и амбициозных плана на лето.
+            </p>
+            <p>
+              Из авторы получат ценные призы, которые сделают
+              исследование лета еще более захватывающим!
+            </p>
+          </div>
         </div>
-        <div class="screen-about-contest__period">
-          С 1 июля по 30 сентября
-        </div>
-        <div class="screen-about-contest__text">
-          <p>
-            Каждые 2 недели мы будем выбирать три самых
-            интересных и амбициозных плана на лето.
-          </p>
-          <p>
-            Из авторы получат ценные призы, которые сделают
-            исследование лета еще более захватывающим!
-          </p>
-        </div>
+
         <!-- <div class="screen-about-contest__cards">
           <div class="card-item">
             <div class="card-item-title">
@@ -304,12 +307,9 @@
             Принять участие
           </button>
         </div>
-
-        <!-- <img src="./images/gold.png" alt="ticket" class="ticket"> -->
       </div>
       <img src="./images/gold.png" alt="ticket" class="ticket">
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
-      <!-- <img src="./images/about-contest-bg.jpg" alt="bg" class="screen-about-contest-bg"> -->
     </div>
 
     <div class="screen screen-plans">
