--- a/src/contest.html
+++ b/src/contest.html
@@ -310,6 +310,7 @@
       </div>
       <img src="./images/gold.png" alt="ticket" class="ticket">
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
     </div>
 
     <div class="screen screen-plans">
@@ -606,6 +607,7 @@
 
       </div>
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
     </div>
 
     <div class="screen screen-contest-form">
@@ -687,6 +689,7 @@
         </form>
       </div>
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
     </div>
 
 
