--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
-gulp bild<!DOCTYPE html>
+gulp bild
+<!DOCTYPE html>
 <html lang="ru">
 
 <head>
@@ -221,7 +222,7 @@ gulp bild<!DOCTYPE html>
 
       <div class="bottle-wrapper">
         <div class="row">
-          <div class="col-md-10 col-sm-10 col-xs-10">
+          <div class="col-md-10 col-sm-10 col-xs-12">
             <img src="./images/bottle.png" srcset="./images/bottle@2x.png" alt="bottle">
           </div>
         </div>
