--- a/public/contest.html
+++ b/public/contest.html
@@ -573,17 +573,17 @@
           </div>
           <div class="screen-plans-pagination">
             <div class="pagination-pages">
-              <button class="pagination-btn">
+              <a class="pagination-btn" href="javascript:void(0)">
                 1
-              </button>
-              <button class="pagination-btn active">
+              </a>
+              <a class="pagination-btn active" href="javascript:void(0)">
                 2
-              </button>
-              <button class="pagination-btn">
+              </a>
+              <a class="pagination-btn" href="javascript:void(0)">
                 3
-              </button>
+              </a>
               <span class="pagination-dots">...</span>
-              <button class="pagination-btn">12</button>
+              <a class="pagination-btn" href="javascript:void(0)">12</a>
             </div>
             <div class="screen-plans-pagination__create">
               <button class="ui-btn">
@@ -605,8 +605,8 @@
               </button>
             </div>
             <div class="pagination__arrows">
-              <button class="arrow-btn prew disabled"></button>
-              <button class="arrow-btn next"></button>
+              <a class="arrow-btn prew disabled" href="javascript:void(0)"></a>
+              <a class="arrow-btn next" href="javascript:void(0)"></a>
             </div>
           </div>
 
