--- a/src/index.html
+++ b/src/index.html
@@ -254,50 +254,164 @@
         <div class="slider">
           <div class="slider-left">
             <div class="slider-content first active">
-              <h2 class="slider-content-title">
+              <div class="h2 slider-content-title">
                 “БЕЛЫЙ МЕДВЕДЬ”
-                ЗОЛОТОЕ ПИВО
-              </h2>
+                <span>ЗОЛОТОЕ</span>
+              </div>
               <p>
                 Легкий питкий лагер с природным мягким вкусом,
                 тонкой хмелевой горчинкой и солодовым послевкусием.
-                Особая технология приготовления сохраняет аромат свежесобранного хмеля и придаёт пиву
-                благородный оттенок настоящего золота.
+                Особая технология приготовления сохраняет аромат свежесобранного хмеля и придаёт пиву благородный
+                оттенок настоящего золота.
               </p>
+              <div class="slider-content-description">
+                <div class="slider-content-description__wrapper">
+                  <div class="image">
+                    <img src="./images/kolos-1.png" alt="kolos">
+                  </div>
+                  <div class="param">
+                    <span>СОРТ:</span>
+                    <span>Светлый лагер</span>
+                  </div>
+                </div>
+                <div class="slider-content-description__wrapper">
+                  <div class="image">
+                    <img src="./images/kolos-2.png" alt="kolos">
+                  </div>
+                  <div class="param">
+                    <span>АЛКОГОЛЬ:</span>
+                    <span>5.0%</span>
+                  </div>
+                </div>
+                <div class="slider-content-description__wrapper">
+                  <div class="image">
+                    <img src="./images/kolos-3.png" alt="kolos">
+                  </div>
+                  <div class="param">
+                    <span>ПЛОТНОСТЬ:</span>
+                    <span>11,0%</span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="slider-content second">
-              <h2 class="slider-content-title">
+              <div class="h2 slider-content-title">
                 “БЕЛЫЙ МЕДВЕДЬ”
-                СВЕТЛОЕ ПИВО
-              </h2>
+                <span>СВЕТЛОЕ</span>
+              </div>
               <p>
                 Флагман бренда «Белый Медведь». Классический
-                светлый лагер из натуральных, тщательно отобранных ингредиентов. Идеальное сочетание
-                немецкого
-                хмеля
-                и отборного солода придают пиву насыщенный бархатистый вкус, богатый аромат и характерную
-                горчинку. 13 медалей международного конкурса
+                светлый лагер из натуральных, тщательно отобранных ингредиентов. Идеальное сочетание немецкого хмеля
+                и отборного солода придают пиву насыщенный бархатистый вкус, богатый аромат и характерную горчинку. 13
+                медалей международного конкурса
                 Monde Selection Quality Awards.
               </p>
+              <div class="slider-content-description">
+                <div class="slider-content-description__wrapper">
+                  <div class="image">
+                    <img src="./images/kolos-1.png" alt="kolos">
+                  </div>
+                  <div class="param">
+                    <span>СОРТ:</span>
+                    <span>Светлый лагер</span>
+                  </div>
+                </div>
+                <div class="slider-content-description__wrapper">
+                  <div class="image">
+                    <img src="./images/kolos-2.png" alt="kolos">
+                  </div>
+                  <div class="param">
+                    <span>АЛКОГОЛЬ:</span>
+                    <span>5.0%</span>
+                  </div>
+                </div>
+                <div class="slider-content-description__wrapper">
+                  <div class="image">
+                    <img src="./images/kolos-3.png" alt="kolos">
+                  </div>
+                  <div class="param">
+                    <span>ПЛОТНОСТЬ:</span>
+                    <span>11,0%</span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="slider-content third">
               <div class="h2 slider-content-title">
                 “БЕЛЫЙ МЕДВЕДЬ”
-                ЖИВОЕ ПИВО
+                <span>ЖИВОЕ</span>
               </div>
               <p>
-                Пивной напиток с ярко выраженным насыщенным вкусом только что сваренного пива. Обладает
-                легким
-                хмелевым ароматом, мягким и приятным вкусом с нотками хлеба
-                и сладковатым послевкусием. 6 медалей международного конкурса Monde Selection Quality
-                Awards.
+                Пивной напиток с ярко выраженным насыщенным вкусом только что сваренного пива. Обладает легким хмелевым
+                ароматом, мягким и приятным вкусом с нотками хлеба
+                и сладковатым послевкусием. 6 медалей международного конкурса Monde Selection Quality Awards.
               </p>
+              <div class="slider-content-description">
+                <div class="slider-content-description__wrapper">
+                  <div class="image">
+                    <img src="./images/kolos-1.png" alt="kolos">
+                  </div>
+                  <div class="param">
+                    <span>СОРТ:</span>
+                    <span>Нефильтрованное</span>
+                  </div>
+                </div>
+                <div class="slider-content-description__wrapper">
+                  <div class="image">
+                    <img src="./images/kolos-2.png" alt="kolos">
+                  </div>
+                  <div class="param">
+                    <span>АЛКОГОЛЬ:</span>
+                    <span>5.0%</span>
+                  </div>
+                </div>
+                <div class="slider-content-description__wrapper">
+                  <div class="image">
+                    <img src="./images/kolos-3.png" alt="kolos">
+                  </div>
+                  <div class="param">
+                    <span>ПЛОТНОСТЬ:</span>
+                    <span>11,0%</span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="slider-navigation">
               <button class="prew disabled">prew</button>
               <button class="next">next</button>
             </div>
 
+          </div>
+          <!-- <div class="slider-right">
+            <div class="slider-bgs">
+              <div class="slider-item-bg first yellow">
+              </div>
+              <div class="slider-item-bg second green">
+              </div>
+              <div class="slider-item-bg third orange">
+              </div>
+            </div>
+            <div class="slider-images">
+              <div class="slider-image first">
+                <img src="./images/BELYI MEDVED_ Gold_bytilka 1.png" alt="" class="first">
+              </div>
+              <div class="slider-image second">
+                <img src="./images/BELYI MEDVED_ Splash_v1b_bytilka 2.png" alt="" class="second">
+              </div>
+              <div class="slider-image third">
+                <img src="./images/BELYI MEDVED_ Gold_bytilka 3.png" alt="" class="third">
+              </div>
+            </div>
+          </div> -->
+
+        </div>
+        <img src="./images/alert.svg" alt="alert" class="screen-alert">
+        <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+      </div>
+
+      <div class="slider-container">
+        <div class="slider">
+          <div class="slider-left">
           </div>
           <div class="slider-right">
             <div class="slider-bgs">
@@ -322,8 +436,8 @@
           </div>
 
         </div>
-        <img src="./images/alert.svg" alt="alert" class="screen-alert">
-        <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+        <!-- <img src="./images/alert.svg" alt="alert" class="screen-alert">
+        <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile"> -->
       </div>
     </div>
     <!-- <footer class="screen footer">
